<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_voz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/ic_play"
        android:title="@string/leer"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_calendario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/ic_calendar_toolbar"
        android:title="@string/all_calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_saint_toggle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/has_saint_24"
        android:title="@string/lbl_santo_hoy"
        app:showAsAction="ifRoom" />
</menu>