<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_menu_camera"
                android:title="Import" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Gallery" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Slideshow" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="Tools" />
        </group>

        <item android:title="Communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send" />
            </menu>
        </item>
    -->
    <group
        android:id="@+id/menu_liturgia"
        android:checkableBehavior="single">
        <!--        <item
                    android:id="@+id/nav_misa"
                    android:icon="@drawable/ic_store_mall_directory_black_24dp"
                    android:title="@string/lbl_misa_hoy" />
        -->
        <item
            android:id="@+id/nav_homilias"
            android:icon="@drawable/ic_homilias_24dp"
            android:title="@string/lbl_homilias_hoy" />
        <item
            android:id="@+id/nav_evangelio"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/lbl_comentarios_hoy" />

    </group>
    <group
        android:id="@+id/menu_santo"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_santo"
            android:icon="@drawable/ic_santo_24dp"
            android:title="@string/lbl_santo_hoy" />
    </group>
    <group
        android:id="@+id/menu_libros"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_rituales"
            android:icon="@drawable/ic_libro_24dp"
            android:title="@string/lbl_rituales" />
    </group>
</menu>
